--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
     </head> 
     <body> 
         <div class="message">for you &lt;3</div> 
+         <div class="buttons">
+      <a href="page2.html" class="btn">What's this about?</a>
+    </div>
     </body>
 </html>
