--- a/page2.html
+++ b/page2.html
@@ -2,19 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Hi 🌸</title>
+  <title>💌</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body class="center">
   <div class="card">
-    <h1>Hii Prarthana 🌸</h1>
-    <p>I have a small question for you…</p>
-    <p><strong>Do you want to know what this website is for?</strong></p>
+    <h1>Okay 🥺</h1>
+    <p>I made this little website just for you.</p>
+    <p>
+      Because today felt like a good day to tell you that<br>
+      <strong>you crossed my mind</strong>, and I wanted to do something nice with that thought.
+    </p>
 
-    <div class="buttons">
-      <a href="page3.html" class="btn">Yes 🤍</a>
-      <a href="page3.html" class="btn">Yes!! 🌷</a>
-    </div>
+    <a href="page3.html" class="btn">Tell me more 💌</a>
   </div>
 </body>
 </html>
