--- a/index.html
+++ b/index.html
@@ -1,15 +1,20 @@
-<!doctype html> 
-<html lang="en"> 
-    <head> 
-        <meta charset="utf-8"> 
-        <meta name="viewport" content="width=device-width,initial-scale=1"> 
-        <title>For You</title> 
-        <style> html,body{height:100%} body{display:flex;align-items:center;justify-content:center;margin:0;font-family:system-ui,Segoe UI,Roboto,Arial,sans-serif;background:#fff} .message{font-size:48px;color:#111} </style> 
-    </head> 
-    <body> 
-        <div class="message">for you &lt;3</div> 
-         <div class="buttons">
-      <a href="page2.html" class="btn">What's this about?</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Hi 🌸</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body class="center">
+  <div class="card">
+    <h1>Hii Prarthana 🌸</h1>
+    <p>I have a small question for you…</p>
+    <p><strong>Do you want to know what this website is for?</strong></p>
+
+    <div class="buttons">
+      <a href="page2.html" class="btn">Yes 🤍</a>
+      <a href="page2.html" class="btn">Yes!! 🌷</a>
     </div>
-    </body>
+  </div>
+</body>
 </html>
