page and css edit

--- a/page2.html
+++ b/page2.html
@@ -7,11 +7,11 @@
 </head>
 <body class="center">
   <div class="card">
-    <h1>Okay 🥺</h1>
+    <h1>Okayy🥺</h1>
     <p>I made this little website just for you.</p>
     <p>
       Because today felt like a good day to tell you that<br>
-      <strong>you crossed my mind</strong>, and I wanted to do something nice with that thought.
+      <strong>YOU</strong> crossed my mind, and I wanted to do something nice with that thought.
     </p>
 
     <a href="page3.html" class="btn">Tell me more 💌</a>
