--- a/page3.html
+++ b/page3.html
@@ -7,14 +7,11 @@
 </head>
 <body class="center">
   <div class="card">
-    <h1>I just wanted you to know this 🤍</h1>
-
-    <p>I’m not here to ask you for anything,<br>
-    and there’s no pressure at all.</p>
+    <h1>I just wanted you to know this🤍</h1>
 
     <p>
       I just thought of you,<br>
-      and I made this with a lot of care and love.
+      and I made this with care and love.
     </p>
 
     <p><strong>Happy Valentine’s Day 🌷</strong><br>
