--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
 </head>
 <body class="center">
   <div class="card">
-    <h1>Hii Prarthana 🌸</h1>
-    <p>I have a small question for you…</p>
+    <h1>HiiHIhi Prarthana 🌸</h1>
     <p><strong>Do you want to know what this website is for?</strong></p>
 
     <div class="buttons">
-      <a href="page2.html" class="btn">Yes 🤍</a>
-      <a href="page2.html" class="btn">Yes!! 🌷</a>
+      <a href="page2.html" class="btn">Yes 🌷</a>
+      <a href="page2.html" class="btn">Yes 🌷</a>
     </div>
   </div>
 </body>
