--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
 
 
  <body class="center">
-    <button id="musicBtn">Play music 🎵</button>
-
-    <audio id="bgMusic" src="music.mp3" loop></audio>
+    <audio id="bgMusic" src="music.mp3" controls></audio>
+      <button id="musicBtn" class="btn">Play Music 🎵</button>
 
     <div class="card">
       <h1>HiiHIhi Prarthana 🌸</h1>
