--- a/page2.html
+++ b/page2.html
@@ -7,26 +7,33 @@
 </head>
 
  <script>
-   document.getElementById("musicBtn").addEventListener("click", function () {
-     const music = document.getElementById("bgMusic");
+   const music = document.getElementById("bgMusic");
+   const btn = document.getElementById("musicBtn");
+
+   // restore state
+   if (localStorage.getItem("musicPlaying") === "true") {
+     music.play();
+     btn.innerText = "🔈";
+   }
  
-     music.play()
-       .then(() => {
-         this.innerText = "Music playing 🔈";
-         this.style.background = "green";
-         this.style.color = "white";
-       })
-       .catch(err => {
-        alert("Audio failed: " + err);
-       });
+   btn.addEventListener("click", () => {
+    if (music.paused) {
+      music.play();
+      localStorage.setItem("musicPlaying", "true");
+      btn.innerText = "🔈";
+    } else {
+      music.pause();
+      localStorage.setItem("musicPlaying", "false");
+      btn.innerText = "🔊";
+    }
    });
-  </script>
+ </script>
 
 
  <body class="center">
-    <button id="musicBtn">Play music 🎵</button>
+     <audio id="bgMusic" src="music.mp3" loop></audio>
 
-    <audio id="bgMusic" src="music.mp3" loop></audio>
+     <button id="musicBtn">🔊</button>
 
 
    <div class="card">
