--- a/page4.html
+++ b/page4.html
@@ -1,31 +1,23 @@
 <!DOCTYPE html>
-
-
 <html lang="en">
- <head>
-   <meta charset="UTF-8">
-   <title>HII 🌸</title>
-   <link rel="stylesheet" href="style.css">
-   <link rel="icon" href="favicon.ico">
+<head>
+  <meta charset="UTF-8">
+  <title>💌</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="favicon.ico">
 
- </head>
+</head>
 
 
  <body class="center">
     
-     <div class="card">
-       <h1>HiiHii Prarthana 🌸</h1>
-       <p><strong>Do you want to know what this website is for?</strong></p>
 
-       <div class="buttons">
-        <a href="page2.html" class="btn">Yes 🤍</a>
-        <a href="page2.html" class="btn">Yes 🌷</a>
+   <div class="card">
+     <h1>Thats about it</h1>
+     <p>Have a lovely day!!!</p>
+    </div>
 
-       
-       </div>
-     </div>
-
-     <audio id="bgMusic" src="music.mp3" loop></audio>
+    <audio id="bgMusic" src="music.mp3" loop></audio>
     <button id="musicBtn">🔊</button>
 
 
