--- a/page3.html
+++ b/page3.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title>🤍</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="favicon.ico">
+
 </head>
 
  
