final edit (i hope)

--- a/page2.html
+++ b/page2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>💌</title>
+  <title>Why you ask?💌</title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="favicon.ico">
 
@@ -17,7 +17,7 @@
      <p>I made this little website just for you.</p>
      <p>
        Because today felt like a good day to tell you that<br>
-       <strong>YOU</strong> crossed my mind, and I wanted to do something nice with that thought.
+       <strong>YOU</strong> crossed my mind (you always do), and I wanted to do something nice with that thought.
      </p>
 
      <a href="page3.html" class="btn">Tell me more 💌</a>
