--- a/page4.html
+++ b/page4.html
@@ -13,7 +13,7 @@
     
 
    <div class="card">
-     <h1>Thats about it</h1>
+     <h1>Thats all!</h1>
      <p>Have a lovely day!!!</p>
     </div>
 
