--- a/page3.html
+++ b/page3.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>🤍</title>
+  <title>This is why🤍</title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="favicon.ico">
 
@@ -19,8 +19,8 @@
      <h1>I just wanted you to know this🤍</h1>
 
      <p>
-      I just thought of you,<br>
-      and I made this with care and love.
+      You make me feel happy and want to do better,<br>
+      and so, I made this for you with care and love.
      </p>
 
      <p><strong>Happy Valentine’s Day 🌷</strong><br>
