--- a/index.html
+++ b/index.html
@@ -1,55 +1,96 @@
 <!DOCTYPE html>
-
-
 <html lang="en">
- <head>
-   <meta charset="UTF-8">
-   <title>HII 🌸</title>
-   <link rel="stylesheet" href="style.css">
-   <link rel="icon" href="favicon.ico">
+<head>
+  <meta charset="UTF-8">
+  <title>HII 🌸</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="favicon.ico">
+</head>
 
- </head>
+<body class="center">
+  <!-- Page 1 -->
+  <div id="page1" class="page">
+    <div class="card">
+      <h1>HiiHii Prarthana 🌸</h1>
+      <p><strong>Do you want to know what this website is for?</strong></p>
+      <div class="buttons">
+        <button class="btn" onclick="goToPage('page2')">Yes 🤍</button>
+        <button class="btn" onclick="goToPage('page2')">Yes 🌷</button>
+      </div>
+    </div>
+  </div>
 
+  <!-- Page 2 -->
+  <div id="page2" class="page" style="display: none;">
+    <div class="card">
+      <h1>Okayy</h1>
+      <p>I made this little website just for you.</p>
+      <p>
+        Because today felt like a good day to tell you that<br>
+        <strong>YOU</strong> crossed my mind (you always do), and I wanted to do something nice with that thought.
+      </p>
+      <button class="btn" onclick="goToPage('page3')">Tell me more 💌</button>
+    </div>
+  </div>
 
- <body class="center">
-    
-     <div class="card">
-       <h1>HiiHii Prarthana 🌸</h1>
-       <p><strong>Do you want to know what this website is for?</strong></p>
+  <!-- Page 3 -->
+  <div id="page3" class="page" style="display: none;">
+    <div class="card">
+      <h1>I just wanted you to know this🤍</h1>
+      <p>
+        You make me feel happy and want to do better,<br>
+        and so, I made this for you with care and love.
+      </p>
+      <p><strong>Happy Valentine's Day 🌷</strong><br>
+        I hope this made you smile, even a little.</p>
+      <button class="btn" onclick="goToPage('page4')">That was really sweet 💖</button>
+    </div>
+  </div>
 
-       <div class="buttons">
-        <a href="page2.html" class="btn">Yes 🤍</a>
-        <a href="page2.html" class="btn">Yes 🌷</a>
+  <!-- Page 4 -->
+  <div id="page4" class="page" style="display: none;">
+    <div class="card">
+      <h1>Thats all!</h1>
+      <p>Have a lovely day!!!</p>
+    </div>
+  </div>
 
-       
-       </div>
-     </div>
+  <!-- Audio - persists across all pages -->
+  <audio id="bgMusic" src="music.mp3" loop></audio>
+  <button id="musicBtn">🔊</button>
 
-     <audio id="bgMusic" src="music.mp3" loop></audio>
-    <button id="musicBtn">🔊</button>
+  <script>
+    const music = document.getElementById("bgMusic");
+    const btn = document.getElementById("musicBtn");
 
-
-   <script>
-   const music = document.getElementById("bgMusic");
-   const btn = document.getElementById("musicBtn");
-
-   // restore state
-   if (localStorage.getItem("musicPlaying") === "true") {
-     music.play();
-     btn.innerText = "🔈";
-   }
- 
-   btn.addEventListener("click", () => {
-    if (music.paused) {
+    // Restore music state on load
+    if (localStorage.getItem("musicPlaying") === "true") {
       music.play();
-      localStorage.setItem("musicPlaying", "true");
       btn.innerText = "🔈";
-    } else {
-      music.pause();
-      localStorage.setItem("musicPlaying", "false");
-      btn.innerText = "🔊";
     }
-   });
- </script>
- </body>
+
+    // Music toggle
+    btn.addEventListener("click", () => {
+      if (music.paused) {
+        music.play();
+        localStorage.setItem("musicPlaying", "true");
+        btn.innerText = "🔈";
+      } else {
+        music.pause();
+        localStorage.setItem("musicPlaying", "false");
+        btn.innerText = "🔊";
+      }
+    });
+
+    // Page navigation function
+    function goToPage(pageId) {
+      // Hide all pages
+      document.querySelectorAll(".page").forEach(page => {
+        page.style.display = "none";
+      });
+      // Show selected page
+      document.getElementById(pageId).style.display = "block";
+    }
+  </script>
+</body>
 </html>
