--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <div class="card">
       <h1>HiiHii Prarthana 🌸</h1>
       <p><strong>Do you want to know what this website is for?</strong></p>
+      <p>Also click on the volume button on the bottom right!</p>
+
       <div class="buttons">
         <button class="btn" onclick="goToPage('page2')">Yes 🤍</button>
         <button class="btn" onclick="goToPage('page2')">Yes 🌷</button>
@@ -27,7 +29,7 @@
       <p>I made this little website just for you.</p>
       <p>
         Because today felt like a good day to tell you that<br>
-        <strong>YOU</strong> crossed my mind (you always do), and I wanted to do something nice with that thought.
+        <strong>YOU</strong> crossed my mind (you always do), and I wanted to do something nice with that thought. A tiny mark representing how much I care about you and how much you mean to me, which will stay on the internet forever.
       </p>
       <button class="btn" onclick="goToPage('page3')">Tell me more 💌</button>
     </div>
@@ -36,7 +38,7 @@
   <!-- Page 3 -->
   <div id="page3" class="page" style="display: none;">
     <div class="card">
-      <h1>I just wanted you to know this🤍</h1>
+      <h1>I also wanted you to know this🤍</h1>
       <p>
         You make me feel happy and want to do better,<br>
         and so, I made this for you with care and love.
@@ -52,6 +54,13 @@
     <div class="card">
       <h1>Thats all!</h1>
       <p>Have a lovely day!!!</p>
+      
+      <form action="https://formsubmit.co/risefrstarline@gmail.com" method="POST" style="margin-top: 30px; text-align: left;">
+        <h3>💌 Leave me a message:</h3>
+        <textarea name="message" placeholder="Type something for me..." required style="width: 100%; height: 120px; padding: 10px; border: 2px solid #ddd; border-radius: 8px; font-size: 14px; font-family: inherit;"></textarea>
+        <input type="hidden" name="_captcha" value="false">
+        <button type="submit" class="btn" style="margin-top: 10px; width: 100%;">Send Message 💖</button>
+      </form>
     </div>
   </div>
 
