--- a/index.html
+++ b/index.html
@@ -53,14 +53,8 @@
   <div id="page4" class="page" style="display: none;">
     <div class="card">
       <h1>Thats all!</h1>
-      <p>Have a lovely day!!!</p>
-      
-      <form action="https://formsubmit.co/risefrstarline@gmail.com" method="POST" style="margin-top: 30px; text-align: left;">
-        <h3>💌 Leave me a message:</h3>
-        <textarea name="message" placeholder="Type something for me..." required style="width: 100%; height: 120px; padding: 10px; border: 2px solid #ddd; border-radius: 8px; font-size: 14px; font-family: inherit;"></textarea>
-        <input type="hidden" name="_captcha" value="false">
-        <button type="submit" class="btn" style="margin-top: 10px; width: 100%;">Send Message 💖</button>
-      </form>
+      <p>Have a lovely day!!</p>
+      <p>I love you</p>
     </div>
   </div>
 
