--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class="card">
       <h1>Thats all!</h1>
       <p>Have a lovely day!!</p>
-      <p>I love you</p>
+      <p>I love you!</p>
     </div>
   </div>
 
